<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAudioBooks"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/audio_book"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewBooks"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/books"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewiosApps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ios_apps"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewMacApps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mac_apps"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewMovies"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/movies"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewItunesU"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/itunes_u"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewMusicVideo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/music_video"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewPodCast"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pod_cast"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/LargeTextTvShows"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_shows"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
